--- a/trillo/index.html
+++ b/trillo/index.html
@@ -45,8 +45,6 @@
             </nav>
         </header>
 
-
-
         <div class="content">
             <nav class="sidebar">
                 <ul class="side-nav">
@@ -122,18 +120,57 @@
                             <use xlink:href="img/sprite.svg#icon-star"></use>
                         </svg>
                     </div>
+
+                    <div class="overview__location">
+                        <svg class="overview__icon-location">
+                            <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                        </svg>
+                        <button class="btn-inline">Albufeira, Portugal</button>
+                    </div>
+
+                    <div class="overview__rating">
+                        <div class="overview__rating-average">8.6</div>
+                        <div class="overview__rating-count">429 votes</div>
+                    </div>
                 </div>
 
-                <div class="overview__location">
-                    <svg class="overview__icon-location">
-                        <use xlink:href="img/sprite.svg#icon-location-pin"></use>
-                    </svg>
-                    <button class="btn-inline">Albufeira, Portugal</button>
-                </div>
+                <div class="detail">
+                    <div class="description">
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis
+                            ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae
+                            architecto voluptate.
+                        </p>
+                        <p class="paragraph">
+                            Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus,
+                            inventore iure aliquid aliquam.
+                        </p>
+                        <ul class="list">
+                            <li class="list__item">Close to the beach</li>
+                            <li class="list__item">Breakfast included</li>
+                            <li class="list__item">Free airport shuttle</li>
+                            <li class="list__item">Free wifi in all rooms</li>
+                            <li class="list__item">Air conditioning and heating</li>
+                            <li class="list__item">Pets allowed</li>
+                            <li class="list__item">We speak all languages</li>
+                            <li class="list__item">Perfect for families</li>
+                        </ul>
+                        <div class="recommend">
+                            <p class="recommend_count">
+                                Lucy and 3 other friend recommend this hotel.
+                            </p>
+                            <div class="recommend__friends">
+                                <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo">
+                                <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo">
+                                <img src="img/user-5.jpg" alt="Friend 3" class="recommend__photo">
+                                <img src="img/user-6.jpg" alt="Friend 4" class="recommend__photo">
+                            </div>
+                        </div>
+                    </div>
 
-                <div class="overview__rating">
-                    <div class="overview__rating-average">8.6</div>
-                    <div class="overview__rating-count">429 votes</div>
+                    <div class="user-reviews">
+                        User reviews
+                    </div>
                 </div>
             </main>
         </div>
